<resources>
    <string name="app_name">Expense Manager</string>
    <string name="action_settings">Settings</string>

    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="description">Description</string>

    <string name="error_message_transaction_type">Please select transaction type</string>
    <string name="error_message_transaction_description">Please enter valid description</string>
    <string name="error_message_transaction_amount">Please enter valid amount</string>

    <string name="transaction_successful">Transaction successfully added</string>
    <string name="empty_transactions">No transactions available!\nTry adding transactions from "+" button at the bottom.</string>
</resources>